--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,7 @@
         "phpunit/phpunit": "*",
         "squizlabs/php_codesniffer": "*",
         "codeclimate/php-test-reporter": "dev-master"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
