--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "bin": [
         "bin/brain-games",
-        "bin/brain-even"
+        "bin/brain-even",
+        "bin/brain-calc"
     ],
     "scripts": {
         "phpcs": "phpcs",
@@ -19,16 +20,21 @@
     },
     "autoload": {
         "psr-4": {
-            "Project1\\": "src"
+            "Project1\\": "src/"
         },
         "files": [
-            "src/Cli.php"
+            "src/Cli.php",
+            "src/games/engine.php",
+            "src/games/even.php",
+            "src/games/calc.php"
         ]
     },
     "require": {
         "wp-cli/php-cli-tools": "*"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "*"
+        "phpunit/phpunit": "*",
+        "squizlabs/php_codesniffer": "*",
+        "codeclimate/php-test-reporter": "dev-master"
     }
 }
