--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "bin": [
         "bin/brain-games",
         "bin/brain-even",
-        "bin/brain-calc"
+        "bin/brain-calc",
+        "bin/brain-gcd"
     ],
     "scripts": {
         "phpcs": "phpcs",
@@ -24,9 +25,10 @@
         },
         "files": [
             "src/Cli.php",
-            "src/games/engine.php",
+            "src/engine.php",
             "src/games/even.php",
-            "src/games/calc.php"
+            "src/games/calc.php",
+            "src/games/gcd.php"
         ]
     },
     "require": {
