add game brain-progression

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
-        "bin/brain-gcd"
+        "bin/brain-gcd",
+        "bin/brain-progression"
     ],
     "scripts": {
         "phpcs": "phpcs",
@@ -28,7 +29,8 @@
             "src/engine.php",
             "src/games/even.php",
             "src/games/calc.php",
-            "src/games/gcd.php"
+            "src/games/gcd.php",
+            "src/games/progression.php"
         ]
     },
     "require": {
