add game brain-prime

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "scripts": {
         "phpcs": "phpcs",
@@ -30,7 +31,8 @@
             "src/games/even.php",
             "src/games/calc.php",
             "src/games/gcd.php",
-            "src/games/progression.php"
+            "src/games/progression.php",
+            "src/games/prime.php"
         ]
     },
     "require": {
